@@ -1,6 +1,8 @@
 cod-tools (unreleased)
 
   * Added:
+    - COD::CIF::Tags::Manage:
+      - accepting CIF format version number in new_datablock().
     - data/replacement_values/replacement_values.lst
       - several more value replacement rules.
   * Changed:
